added google analytics footer

--- a/caesarCipher.html
+++ b/caesarCipher.html
@@ -165,5 +165,14 @@ Your text will appear here.
 This webpage is licensed under the creative commons <a href="http://creativecommons.org/licenses/by/3.0/">"Attribution"</a> license.<br/>
 Please send comments to nicolas.hoibian_AT_gmail.com with "Av&eacute; Caesar" in the title ;-).
 </center>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3650019-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
 </body>
 </html>
