updated the css to match niconomicon.net

--- a/caesarCipher.html
+++ b/caesarCipher.html
@@ -2,24 +2,28 @@
 <head>
 <style type="text/css">
 html{
-	color:#ffffff;
-	background:#707070;
-	font-family: Myriad, Helvetica, Georgia, Arial, "Sans Serif";
+	color: #808080;
+	background-color: #333333;
+	font-family: "Adobe Myriad", "Helvetica Neue", Helvetica, Verdana, Georgia, Arial, "Sans Serif";
+	text-shadow: #000 1px 1px 0;
 }
 
 body {
-	font-family: Myriad, Helvetica, Georgia, Arial, "Sans Serif";
-	background:#707070;
-	color:#ffffff;
-	font-size: 12pt;
+	font-family: "Adobe Myriad", "Helvetica Neue", Helvetica, Verdana, Georgia, Arial, "Sans Serif";
+	font-size: 92%;
 	margin: -0px;
 	padding:30px;
 	text-align: justify;
 }
 
 h1 {
-	font-size: 30px;
-	padding-bottom:20px;
+	color: #a0a0a0;
+	font-size: 1.5em;
+	margin-top: 18px;
+	margin-bottom: 18px;
+
+/*	font-size: 30px;
+	padding-bottom:20px;*/
 }
 a{
 	color:darkorange;
@@ -123,7 +127,7 @@ function rotateText(){
 </head>
 <body>
 <center>
-<h1>Online <a href="http://en.wikipedia.org/wiki/Caesar_cipher">Caesar Cipher</a> in Javascript</h1>
+<h1>Online <a href="http://en.wikipedia.org/wiki/Caesar_cipher">Caesar Cypher</a> in Javascript</h1>
 </center>
 <!--
 Alphabet shifting at the press of a button!!!<br/>
